# weather-app

./: .gitignore  Apperance.cpp  Apperance.hpp  CMakeLists.txt  Interface.hpp  LICENSE  Location.cpp  Location.hpp  Network.cpp  Network.hpp  README.md  SunRise.cpp  SunRise.hpp  ToDo  Unit.cpp  Unit.hpp  VerticalLabel.cpp  VerticalLabel.hpp  WeatherData.cpp  WeatherData.hpp  WeatherDay.cpp  WeatherDay.hpp  WeatherDayAdvance.cpp  WeatherDayAdvance.hpp  WeatherDays.cpp  WeatherDays.hpp  WeatherDisplay.cpp  WeatherDisplay.hpp  WeatherLocalization.cpp  WeatherLocalization.hpp  WeatherProperties.cpp  WeatherProperties.hpp  WeatherSettings.cpp  WeatherSettings.hpp  main.cpp
